--- a/FrontEnd/src/styles/Header.module.scss
+++ b/FrontEnd/src/styles/Header.module.scss
@@ -5,17 +5,25 @@
     width: 100%;
     &__nav {
         @include flexContainer(row, space-between, center);
-        margin: 10px 20px;
+        // margin: 10px 20px;
+        padding: 5px 20px;
     }
     &__img {
         width: 200px;
         height: 54px;
     }
+    &__signIn {
+        @include flexContainer(row, space-between, center);
+        gap: 10px;
+    }
     &__link {
         @include flexContainer(row, space-between, center);
         @include fontStyle(16px, 700);
-        gap: 10px;
+        gap: 5px;
         text-decoration: none;
         color: $main-color;
+        p {
+            margin: 0;
+        }
     }
 }
