--- a/FrontEnd/src/styles/User.module.scss
+++ b/FrontEnd/src/styles/User.module.scss
@@ -10,10 +10,13 @@
         @include flexContainer(column, center, center);
         color: $white-color;
         max-height: 300px;
-        margin: 0 auto;
-        margin-top: 3rem;
-        padding: 2rem;
+        // margin: 0 auto;
+        // margin-top: 3rem;
+        padding-bottom: 2rem;
         text-align: center;
+        h1 {
+            @include fontStyle (32px, 700);
+        }
     }
     &__editButton {
         @include flexContainer(column, space-between, center);
@@ -24,5 +27,6 @@
         padding: 8px;
         margin-top: 1rem;
         max-width: 87px;
+        text-decoration: none;
     }
 }
