App.jsx : added route to EditUser Banner.jsx : replaced <div> by <section> Header.jsx : added function handleLgout dataAccount.js : array DATA put in a separated file instead of in the code EditUser.jsx : new component to edit firstname and lastname Home.jsx : added call to <Header /> Sign-In.jsx : added call to function handleSubmit on <form> + managed "onChange" in <input> + replaced <link> by <button> User.jsx : externalized DATA array ...module.scss : added responsive management in all style files

--- a/FrontEnd/src/styles/Feature.module.scss
+++ b/FrontEnd/src/styles/Feature.module.scss
@@ -21,3 +21,9 @@
         margin: 0;
     }
 }
+
+@media screen and (max-width: 920px) {
+    .feature {
+        @include dimension(90%, 250px);
+    }
+}
