--- a/FrontEnd/src/styles/Features.module.scss
+++ b/FrontEnd/src/styles/Features.module.scss
@@ -4,3 +4,9 @@
 .features {
     @include flexContainer(row, space-between, center);
 }
+
+@media screen and (max-width : 920px) {
+    .features {
+        @include flexContainer(column, space-between, center);
+    }
+}
