--- a/FrontEnd/src/styles/Account.module.scss
+++ b/FrontEnd/src/styles/Account.module.scss
@@ -8,10 +8,9 @@
     border: 1px solid $black-color;
     margin: 0 auto;
     padding: 1.5rem;
-    text-align: left;
     margin-bottom: 2rem;
     &__content {
-
+        text-align: left;
     }
     &__title {
         @include fontStyle (1rem, 500);
@@ -38,4 +37,17 @@
         margin-top: 1rem;
         width: 200px;
     }
+}
+
+@media screen and (max-width : 920px) {
+    .account {
+        @include flexContainer(column, space-between, flex-start);
+        &__button {
+            width: 100%;
+        }
+        &__transactionButton {
+            width: 100%;
+        }
+    }
+    
 }
