--- a/FrontEnd/src/styles/Banner.module.scss
+++ b/FrontEnd/src/styles/Banner.module.scss
@@ -6,14 +6,15 @@
     overflow: hidden;
     position: relative;
     &__img {
-        @include dimension(100%, auto);
+        @include dimension(100%, 100%);
         position: absolute;
-        top: -180px;
+        object-fit: cover;
     }
     &__content {
         position: absolute;
-        top: 50px;
-        right: 50px;
+        top: 40%;
+        left: 70%;
+        transform: translate(-50%, -50%);
         width: 300px;
         margin: 2rem;
         padding: 2rem;
@@ -27,5 +28,24 @@
     }
     &__text {
         @include fontStyle(1.2rem, 500);
+    }
+}
+
+// Media queries
+
+@media screen and (max-width: 920px) {
+    .banner {
+        @include dimension(100%, 300px);
+        &__content {
+            top: 30%;
+            left: 50%;
+            width: 200px;
+        }
+        &__subtitle {
+            @include fontStyle(1rem, 700);
+        }
+        &__text {
+            @include fontStyle(0.9rem, 500);
+        }
     }
 }
