--- a/FrontEnd/src/styles/Profile.module.scss
+++ b/FrontEnd/src/styles/Profile.module.scss
@@ -1,7 +1,7 @@
 @import './-variables.scss';
 @import './-mixins.scss';
 
-.editUser {
+.profile {
     width: 100%;
     height : 903px;
     background-color: $bg-grey-color;
@@ -59,7 +59,7 @@
 }
 
 @media screen and (max-width: 550px) {
-    .editUser {
+    .profile {
         &__input {
             @include flexContainer(column, center, center);
             input {
