Account.jsx / Account.module.scss : updated <button> color when current page is "/Profile" Banner.module.scss : added transform Profile.module.scss : replaced hexa colors by variables

--- a/FrontEnd/src/styles/Banner.module.scss
+++ b/FrontEnd/src/styles/Banner.module.scss
@@ -39,6 +39,7 @@
         &__content {
             top: 30%;
             left: 50%;
+            transform: translate(-62%, -50%);
             width: 200px;
         }
         &__subtitle {
