--- a/FrontEnd/src/styles/-variables.scss
+++ b/FrontEnd/src/styles/-variables.scss
@@ -4,3 +4,5 @@ $main-color : #2c3e50;
 $bg-blue-color : #12002b;
 $bg-green-color : #00bc77;
 $bg-grey-color : #e7ecef;
+$bg-purple-color : #5077f7;
+$grey-color : #b9b7b7;
