--- a/FrontEnd/src/styles/Account.module.scss
+++ b/FrontEnd/src/styles/Account.module.scss
@@ -5,7 +5,7 @@
     @include flexContainer(row, space-between, center);
     width: 80%;
     background-color: $white-color;
-    border: 1px solid $black-color;
+    border: 1px solid $grey-color;
     margin: 0 auto;
     padding: 1.5rem;
     margin-bottom: 2rem;
@@ -24,18 +24,21 @@
     &__description {
         margin: 0;
     }
-    &__button {
-
-    }
     &__transactionButton {
         @include flexContainer(column, space-between, center);
         @include fontStyle(1.1rem, 700);
         background-color: $bg-green-color;
         border-color: $bg-green-color;
+        border-radius: 5px;
         color: $white-color;
         padding: 8px;
         margin-top: 1rem;
         width: 200px;
+        cursor: pointer;
+    }
+    &__profile {
+        background-color: $bg-purple-color;
+        border-color: $bg-purple-color;
     }
 }
 
