App.jsx : added "user" state and added "user" and "setUser" to the routes
Header.jsx : replaced localStorage setItem by "setUser" + added component parameters "user" and "setUser" + added propTypes

Error.jsx : replaced localStorage setItem by "setUser" + added component parameters "user" and "setUser" + added propTypes + call to <Header /> with parameters "user" and "setUser"

Home.jsx : added component parameters "user" and "setUser" + added propTypes + call to <Header /> with parameters "user" and "setUser"

Profile.jsx :  replaced localStorage setItem by "setUser" + replaced localStorage getItem by "user." + added component parameters "user" and "setUser" + added propTypes + call to <Header /> with parameters "user" and "setUser"

Sign-In.jsx :  replaced localStorage setItem by "setUser" +  added component parameters "user" and "setUser" + added propTypes + call to <Header /> with parameters "user" and "setUser"

User.jsx : replaced localStorage getItem by "user." + added component parameters "user" and "setUser" + added propTypes + call to <Header /> with parameters "user" and "setUser"

module.scss : some styles adjustements

--- a/FrontEnd/src/styles/Banner.module.scss
+++ b/FrontEnd/src/styles/Banner.module.scss
@@ -41,6 +41,7 @@
             left: 50%;
             transform: translate(-62%, -50%);
             width: 200px;
+            padding: 1rem;
         }
         &__subtitle {
             @include fontStyle(1rem, 700);
