App.jsx : removed  "user" useState + removed parameters "user" and "setUser" on the routes
main.jsx : added <Provider store={store}> to the application

store.js : created the redux store

userSlice.js : created userSlice with 3 actions

Header.jsx : removed function parameters +
replaced setUser by dispatch(logout()) +
removed propTypes

Error.jsx : removed function parameters +
replaced setUser by dispatch(logout()) +
removed propTypes +
removed parameters "user" and "setUser" when call to <Header />

User.jsx : removed function parameters +
added useSelector state.user +
removed propTypes +
removed parameters "user" and "setUser" when call to <Header />

Profile.jsx : removed function parameters +
replaced setUser by dispatch(updateUser()) +
added useSelector state.user +
removed propTypes +
removed parameters "user" and "setUser" when call to <Header /> +
managed error and loading

Sign-In.jsx : removed function parameters +
replaced setUser by dispatch(login()) +
added useSelector state.user +
removed propTypes +
removed parameters "user" and "setUser" when call to <Header /> +
managed loading +
Profile.module.scss and Sign-In.module.scss some styles adjustments

--- a/FrontEnd/src/styles/Profile.module.scss
+++ b/FrontEnd/src/styles/Profile.module.scss
@@ -10,7 +10,7 @@
         @include flexContainer(column, center, center);
         color: $white-color;
         max-height: 400px;
-        padding-bottom: 2rem;
+        padding-bottom: 0.5rem;
         text-align: center;
     }
     &__title {
@@ -34,14 +34,19 @@
         @include flexContainer(row, center, center);
         gap: 20px;
         button {
-            @include fontStyle (1.1rem, 500);
-            padding: 0.7rem;
+            @include fontStyle (1.1rem, 700);
+            padding: 0.4rem;
             border-radius: 5px;
             color: $white-color;
             background-color: $bg-green-color;
             width: 100px;
             cursor: pointer;
         }
+    }
+    &__msg {
+        color: red;
+        font-size: 0.9rem;
+        min-height: 1.1rem;
     }
 }
 
