--- a/FrontEnd/src/styles/Header.module.scss
+++ b/FrontEnd/src/styles/Header.module.scss
@@ -5,11 +5,9 @@
     width: 100%;
     &__nav {
         @include flexContainer(row, space-between, center);
-        // margin: 10px 20px;
         padding: 5px 20px;
     }
     &__img {
-        // width: 200px;
         height: 54px;
     }
     &__signIn {
@@ -21,6 +19,9 @@
         @include fontStyle(16px, 700);
         gap: 5px;
         text-decoration: none;
+        background: none;
+        border: none;
+        cursor: pointer;
         color: $main-color;
         p {
             margin: 0;
